@@ -1,5 +1,12 @@
 2008-05-22  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
+    * src/lib/TileLoader.cpp (setTextureLayer)
+
+    Small cleanup.
+    Do not allocate tile dynamically since it is a local variable.
+
+2008-05-22  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
     * src/lib/SphericalScanlineTextureMapper.cpp (mapTexture)
 
     Small cleanup.
